@@ -80,6 +80,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       parent PID polling.
     - unixhelper.{cpp,h}: ignore SIGINT, SIGTERM, SIGPIPE, SIGQUIT, SIGUSR1
       and SIGUSR2.
+    - x2goclient.cpp: fix failing exec() call for the UNIX helper utility:
+      correctly terminate arguments vector.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
